fixed footer overlap on small laptop

--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -8,8 +8,6 @@
 .about-us-container .main-about {
     width: 90%;
     height: 100%;
-    ;
-
     margin: auto;
     display: flex;
 }
@@ -30,7 +28,7 @@
 .animated-image {
     position: absolute;
     top: 10%;
-    left: 12%;
+    left: 0%;
     z-index: 100;
     width: 100%;
     /* opacity: 0; */
@@ -38,7 +36,7 @@
 }
 
 .main-about .about-image-container img {
-    width: 80%;
+    width: 100%;
     height: 80%;
     margin: auto;
     border-radius: 8px;
